[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rephoto"
version = "0.1.0"
description = "NixOS-first Google Photos re-upload workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.45,<2",
]

[project.scripts]
rephoto = "rephoto.cli:main"

[tool.setuptools.packages.find]
include = ["rephoto*"]
